fixed ahiru z-index bug
added position for z-index to be applied

--- a/src/Components/Ahiru.css
+++ b/src/Components/Ahiru.css
@@ -1,7 +1,8 @@
 .ahiru-container {
+    position: relative;
     margin-top: 65vh;
     margin-left: 30px;
-    z-index: 2;
+    z-index: 3;
 }
 .ahiru-walk-gif {
     height: 100px;
